<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ulifepurple"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/shape_toolbar01">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_white"
            android:background="@android:color/transparent"
            android:layout_margin="10dp"
            android:padding="10dp"/>

        <ImageView
            android:id="@+id/iconIv"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:src="@drawable/ulifelogo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iconIv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/user_register_title"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-condensed"
            android:textSize="20sp"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="230dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Nome -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/nameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_person_gray"
                    android:drawablePadding="10dp"
                    android:hint="@string/text_name"
                    android:inputType="textPersonName|textCapWords"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray01"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Email -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameTil"
                android:layout_marginTop="10dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_email_gray"
                    android:drawablePadding="10dp"
                    android:hint="@string/text_email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray01"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- RA -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/raTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailTil"
                android:layout_marginTop="10dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/raEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_cardra_gray"
                    android:drawablePadding="10dp"
                    android:hint="@string/ra_number"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray01"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Senha -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/raTil"
                android:layout_marginTop="10dp"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_setpass_gray"
                    android:drawablePadding="10dp"
                    android:hint="@string/text_password"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray01"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Confirma senha -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confPasswordTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordTil"
                android:layout_marginTop="10dp"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/confPasswordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_setpass_gray"
                    android:drawablePadding="10dp"
                    android:hint="@string/text_confPassword"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray01"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Esqueceu a senha
            <TextView
                android:id="@+id/forgotTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordTil"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:text="@string/forgot_password"
                android:textColor="@color/white"/>
            -->

            <!-- Registrar -->
            <Button
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/confPasswordTil"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape_button01"
                android:text="@string/register_button"
                android:textColor="@color/white"/>

        </RelativeLayout>
    </ScrollView>

    <!-- Registrar
    <TextView
        android:id="@+id/noAccountTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:text="@string/new_user_register"
        android:textColor="@color/white"/>
     -->

</RelativeLayout>